--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "@types/react": "^17.0.38",
+    "@types/warning": "^3.0.0",
     "microbundle": "^0.14.2",
     "react": "^17.0.2",
     "rimraf": "^3.0.2",
@@ -27,7 +28,8 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "lit-html": "^2.1.2"
+    "lit-html": "^2.1.2",
+    "warning": "^4.0.3"
   },
   "files": [
     "src",
